--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -23,7 +23,7 @@ include components/modals/_event-settings.pug
     .content-body
       .row.card-icons
           .col-12
-            .card.bg-pink
+            .card.bg-dark
               .card-content
                 .card-body
                   .row
@@ -67,118 +67,163 @@ include components/modals/_event-settings.pug
       // Payment Methods & Purchase History
       .row.match-height
         .col-xl-6.col-lg-12.col-sm-12
-              .card
-                  .card-header
-                      h4.card-title#event-occurrence-title
-                  .card-body
-                      p.card-text This is the most basic eample with html template and events to be shown on the calendar.</p>
-                      #clndr-default.overflow-hidden.bg-grey.bg-lighten-3
-                        .clndr
-                          .clndr-controls
-                              .clndr-previous-button &lt;
-                              .clndr-next-button &gt;
-                              .current-month January 2020
-                          .clndr-grid
-                            .days-of-the-week.clearfix  
-                              .header-day S
-                              .header-day M
-                              .header-day T
-                              .header-day W
-                              .header-day T
-                              .header-day F
-                              .header-day S
-                            .days
-                              .day.past.adjacent-month.last-month.calendar-day-2019-12-29.calendar-dow-0
-                                span.day-number 29
-                          
-                              .day.past.adjacent-month.last-month.calendar-day-2019-12-30.calendar-dow-1
-                                span.day-number 30
-                          
-                              .day.past.adjacent-month.last-month.calendar-day-2019-12-31.calendar-dow-2
-                                span.day-number 31
-                          
-                              .day.past.calendar-day-2020-01-01.calendar-dow-3
-                                span.day-number 1
-                          
-                              .day.past.calendar-day-2020-01-02.calendar-dow-4 
-                                span.day-number 2
-                              .day.past.calendar-day-2020-01-03.calendar-dow-5 
-                                span.day-number 3
-                              .day.past.calendar-day-2020-01-04.calendar-dow-6
-                                span.day-number 4
-                              .day.past.calendar-day-2020-01-05.calendar-dow-0 
-                                span.day-number 5
-                              .day.past.calendar-day-2020-01-06.calendar-dow-1 
-                                span.day-number 6
-                              .day.past.calendar-day-2020-01-07.calendar-dow-2
-                                span.day-number 7
-                              .day.past.calendar-day-2020-01-08.calendar-dow-3 
-                                span.day-number 8
-                              .day.past.calendar-day-2020-01-09.calendar-dow-4 
-                                span.day-number 9
-                              .day.past.event.calendar-day-2020-01-10.calendar-dow-5
-                                span.day-number 10
-                              .day.past.calendar-day-2020-01-11.calendar-dow-6 
-                                span.day-number 11
-                              .day.past.calendar-day-2020-01-12.calendar-dow-0 
-                                span.day-number 12
-                              .day.past.calendar-day-2020-01-13.calendar-dow-1
-                                span.day-number 13
-                              .day.past.calendar-day-2020-01-14.calendar-dow-2
-                                span.day-number 14
-                              .day.past.calendar-day-2020-01-15.calendar-dow-3
-                                span.day-number 15
-                              .day.past.calendar-day-2020-01-16.calendar-dow-4
-                                span.day-number 16
-                              .day.past.calendar-day-2020-01-17.calendar-dow-5
-                                span.day-number 17
-                              .day.past.calendar-day-2020-01-18.calendar-dow-6
-                                span.day-number 18
-                              .day.past.event.calendar-day-2020-01-19.calendar-dow-0
-                                span.day-number 19
-                              .day.today.calendar-day-2020-01-20.calendar-dow-1
-                                span.day-number 20
-                              .day.calendar-day-2020-01-21.calendar-dow-2
-                                span.day-number 21
-                              .day.calendar-day-2020-01-22.calendar-dow-3
-                                span.day-number 22
-                              .day.event.calendar-day-2020-01-23.calendar-dow-4
-                                span.day-number 23
-                              .day.calendar-day-2020-01-24.calendar-dow-5 
-                                span.day-number 24
-                              .day.calendar-day-2020-01-25.calendar-dow-6
-                                span.day-number 25
-                              .day.calendar-day-2020-01-26.calendar-dow-0
-                                span.day-number 26
-                              .day.calendar-day-2020-01-27.calendar-dow-1 
-                                span.day-number 27
-                              .day.calendar-day-2020-01-28.calendar-dow-2 
-                                span.day-number 28
-                              .day.calendar-day-2020-01-29.calendar-dow-3
-                                span.day-number 29
-                              .day.calendar-day-2020-01-30.calendar-dow-4
-                                span.day-number 30
-                              .day.calendar-day-2020-01-31.calendar-dow-5
-                                span.day-number 31
-                              .day.adjacent-month.next-month.calendar-day-2020-02-01.calendar-dow-6
-                                span.day-number 1
-                          
-                          .event-listing
-                            .event-listing-title Event this month
-                              .event-item.font-small-3
-                                .event-item-day.font-small-2 2020-01-10
-                                .event-item-name.text-bold-600.Persian Kitten Auction
-                                .event-item-location Center for Beautiful Cats
-                          
-                              .event-item.font-small-3
-                                .event-item-day.font-small-2 2020-01-19
-                                .event-item-name.text-bold-600 Cat Frisbee
-                                .event-item-location Jefferson Park
-                                  
-                              .event-item.font-small-3
-                                .event-item-day.font-small-2 2020-01-23
-                                .event-item-name.text-bold-600 Kitten Demonstration
-                                .event-item-location Center for Beautiful Cats
+          .card
+              .card-header
+                  h4.card-title.dark#event-occurrence-title
+              .card-body
+                  //p.card-text.white This is the most basic eample with html template and events to be shown on the calendar.</p>
+                  #clndr-default.overflow-hidden.bg-teal.bg-lighten-3
+                    .clndr
+                      .clndr-controls.bg-teal
+                          .clndr-previous-button &lt;
+                          .clndr-next-button &gt;
+                          .current-month January 2020
+                      .clndr-grid.bg-teal.bg-lighten-5
+                        .days-of-the-week.clearfix.bg-teal.bg-lighten-3
+                          .header-day S
+                          .header-day M
+                          .header-day T
+                          .header-day W
+                          .header-day T
+                          .header-day F
+                          .header-day S
+                        .days
+                          .day.past.adjacent-month.last-month.calendar-day-2019-12-29.calendar-dow-0
+                            span.day-number 29
+                      
+                          .day.past.adjacent-month.last-month.calendar-day-2019-12-30.calendar-dow-1
+                            span.day-number 30
+                      
+                          .day.past.adjacent-month.last-month.calendar-day-2019-12-31.calendar-dow-2
+                            span.day-number 31
+                      
+                          .day.past.calendar-day-2020-01-01.calendar-dow-3
+                            span.day-number 1
+                      
+                          .day.past.calendar-day-2020-01-02.calendar-dow-4 
+                            span.day-number 2
+                          .day.past.calendar-day-2020-01-03.calendar-dow-5 
+                            span.day-number 3
+                          .day.past.calendar-day-2020-01-04.calendar-dow-6
+                            span.day-number 4
+                          .day.past.calendar-day-2020-01-05.calendar-dow-0 
+                            span.day-number 5
+                          .day.past.calendar-day-2020-01-06.calendar-dow-1 
+                            span.day-number 6
+                          .day.past.calendar-day-2020-01-07.calendar-dow-2
+                            span.day-number 7
+                          .day.past.calendar-day-2020-01-08.calendar-dow-3 
+                            span.day-number 8
+                          .day.past.calendar-day-2020-01-09.calendar-dow-4 
+                            span.day-number 9
+                          .day.past.event.calendar-day-2020-01-10.calendar-dow-5
+                            span.day-number 10
+                          .day.past.calendar-day-2020-01-11.calendar-dow-6 
+                            span.day-number 11
+                          .day.past.calendar-day-2020-01-12.calendar-dow-0 
+                            span.day-number 12
+                          .day.past.calendar-day-2020-01-13.calendar-dow-1
+                            span.day-number 13
+                          .day.past.calendar-day-2020-01-14.calendar-dow-2
+                            span.day-number 14
+                          .day.past.calendar-day-2020-01-15.calendar-dow-3
+                            span.day-number 15
+                          .day.past.calendar-day-2020-01-16.calendar-dow-4
+                            span.day-number 16
+                          .day.past.calendar-day-2020-01-17.calendar-dow-5
+                            span.day-number 17
+                          .day.past.calendar-day-2020-01-18.calendar-dow-6
+                            span.day-number 18
+                          .day.past.event.calendar-day-2020-01-19.calendar-dow-0
+                            span.day-number 19
+                          .day.today.calendar-day-2020-01-20.calendar-dow-1
+                            span.day-number 20
+                          .day.calendar-day-2020-01-21.calendar-dow-2
+                            span.day-number 21
+                          .day.calendar-day-2020-01-22.calendar-dow-3
+                            span.day-number 22
+                          .day.event.calendar-day-2020-01-23.calendar-dow-4
+                            span.day-number 23
+                          .day.calendar-day-2020-01-24.calendar-dow-5 
+                            span.day-number 24
+                          .day.calendar-day-2020-01-25.calendar-dow-6
+                            span.day-number 25
+                          .day.calendar-day-2020-01-26.calendar-dow-0
+                            span.day-number 26
+                          .day.calendar-day-2020-01-27.calendar-dow-1 
+                            span.day-number 27
+                          .day.calendar-day-2020-01-28.calendar-dow-2 
+                            span.day-number 28
+                          .day.calendar-day-2020-01-29.calendar-dow-3
+                            span.day-number 29
+                          .day.calendar-day-2020-01-30.calendar-dow-4
+                            span.day-number 30
+                          .day.calendar-day-2020-01-31.calendar-dow-5
+                            span.day-number 31
+                          .day.adjacent-month.next-month.calendar-day-2020-02-01.calendar-dow-6
+                            span.day-number 1
+                      
+                      .event-listing
+                        .event-listing-title.bg-teal.bg-lighten-3 Event this month
+                          .event-item.font-small-3
+                            .event-item-day.font-small-2 2020-01-10
+                            .event-item-name.text-bold-600.Persian Kitten Auction
+                            .event-item-location Center for Beautiful Cats
+                      
+                          .event-item.font-small-3
+                            .event-item-day.font-small-2 2020-01-19
+                            .event-item-name.text-bold-600 Cat Frisbee
+                            .event-item-location Jefferson Park
+                              
+                          .event-item.font-small-3
+                            .event-item-day.font-small-2 2020-01-23
+                            .event-item-name.text-bold-600 Kitten Demonstration
+                            .event-item-location Center for Beautiful Cats
+        .col-xl-6.col-lg-12.col-sm-12
+          .card
+              .card-header
+                  h4.card-title.dark#event-information-title
+              .card-body
+                .col-12
+                  table.table.table-borderless
+                    tbody
+                      tr
+                        td Username:
+                        td.users-view-username dean3004
+                      tr
+                        td Name:
+                        td.users-view-name Dean Stanley
+                      tr
+                        td E-mail:
+                        td.users-view-email deanstanley@gmail.com
+                      tr
+                        td Comapny:
+                        td XYZ Corp. Ltd.
+                  h5.mb-1
+                    i.ft-link
+                    | Social Links
+                  table.table.table-borderless
+                    tbody
+                      tr
+                        td Twitter:
+                        td
+                          a(href="#") https://www.twitter.com/
+                      tr
+                        td Facebook:
+                        td
+                          a(href="#") https://www.facebook.com/
+                      tr
+                        td Instagram:
+                        td
+                          a(href="#") https://www.instagram.com/
+                  h5.mb-1
+                    i.ft-info
+                    | Personal Info
+                  table.table.table-borderless.mb-0
+                    tbody
+                      tr
+                        td Birthday:
+                        td 03/04/1990
       .row.match-height
         .col-md-6
           .card.payment
